Closed
Bug 1498433
Opened 7 years ago
Closed 7 years ago
Crash reporter window is hidden behind other applications when Firefox crashes
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
VERIFIED
FIXED
mozilla64
People
(Reporter: mstange, Assigned: spohl)
References
Details
(Keywords: regression)
Attachments
(1 file)
857 bytes,
patch
|
mstange
:
review+
pascalc
:
approval-mozilla-release+
ryanvm
:
approval-mozilla-esr60+
|
Details | Diff | Splinter Review |
Steps to reproduce:
Trigger a crash of the parent process, for example like this:
1. Set the pref devtools.chrome.enabled to true.
2. Open the Browser Console using Cmd+Shift+J.
3. Paste the following code into the textbox and press enter:
Cu.import("resource://gre/modules/ctypes.jsm");var badnumber = new ctypes.intptr_t(8);var badptr = ctypes.cast(badnumber, ctypes.PointerType(ctypes.int32_t));var crash = badptr.contents;
Firefox crashes.
Expected results:
The crash reporter window should appear in front of everything, and it should be focused.
Actual results:
A window from the crash reporter appears, but it's hidden behind all the other windows on the screen. No icon in the Dock appears. You can not Cmd+Tab to the crash reporter window. If you press Cmd+H often enough to hide all your other open apps, you will eventually reveal the crash reporter window.
This is a regression from bug 1471873.
It would be interesting to see whether we've seen a reduced number of crash report submissions on macOS since bug 1471873 landed.
Assignee | ||
Comment 1•7 years ago
|
||
The fact that the crash reporter window did not appear in the foreground and wasn't focused seems to be a long standing issue. We were missing this call, which is used by Firefox and the updater. I'm not quite sure why cmd+tab did not work for you as it seems to be working for me on 10.13... I tested this by typing `about:crashparent` in the URL bar.
Assignee: nobody → spohl.mozilla.bugs
Status: NEW → ASSIGNED
Attachment #9016526 -
Flags: review?(mstange)
Reporter | ||
Comment 2•7 years ago
|
||
Comment on attachment 9016526 [details] [diff] [review]
Patch
Review of attachment 9016526 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks!
Attachment #9016526 -
Flags: review?(mstange) → review+
Assignee | ||
Comment 3•7 years ago
|
||
[Tracking Requested - why for this release]:
Bug 1471873 makes the current problem of the non-focused crash reporter window worse because it can no longer be tabbed to using cmd+tab and there is no Dock icon anymore. Since bug 1471873 has been uplifted to ESR and Beta we definitely want to uplift this patch as well.
status-firefox63:
--- → affected
status-firefox-esr60:
--- → affected
tracking-firefox63:
--- → ?
tracking-firefox-esr60:
--- → ?
Assignee | ||
Comment 4•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/2aede0d5656f05304e2a584cabd0ce9c0337723f
Bug 1498433: Ensure that crash reporter is in the foreground and focused on macOS. r=mstange
Pushed by spohl@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/2aede0d5656f
Ensure that crash reporter is in the foreground and focused on macOS. r=mstange
Comment 6•7 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
Comment 7•7 years ago
|
||
Please nominate this for Beta/ESR60 approval.
status-firefox62:
--- → unaffected
tracking-firefox64:
--- → +
Flags: qe-verify+
Flags: needinfo?(spohl.mozilla.bugs)
Assignee | ||
Comment 8•7 years ago
|
||
Comment on attachment 9016526 [details] [diff] [review]
Patch
[ESR Uplift Approval Request]
If this is not a sec:{high,crit} bug, please state case for ESR consideration: The crash reporter appears to not have been shown as focused window on macOS. Bug 1471873 made the current problem of the non-focused crash reporter window worse because it can no longer be tabbed to using cmd+tab and there is no Dock icon anymore. Since bug 1471873 has been uplifted to ESR and Beta we need to uplift this patch as well.
User impact if declined: The crash reporter window would continue to not be focused and may be hidden behind other apps, as it was before. However, there would no longer be a Dock icon and the user would not be able to tab to the crash reporter using cmd+tab anymore. We should make sure that the crash reporter window is focused when it is first displayed.
Fix Landed on Version: 64
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): The method of focusing the application window is used by Firefox and the updater alike. We should have been focusing the crash reporter window like this all along.
String or UUID changes made by this patch: none
[Beta/Release Uplift Approval Request]
Feature/Bug causing the regression: Bug 1471873
User impact if declined: The crash reporter window would continue to not be focused and may be hidden behind other apps, as it was before. However, there would no longer be a Dock icon and the user would not be able to tab to the crash reporter using cmd+tab anymore. We should make sure that the crash reporter window is focused when it is first displayed.
Is this code covered by automated tests?: No
Has the fix been verified in Nightly?: Yes
Needs manual test from QE?: Yes
If yes, steps to reproduce: Type `about:crashparent` in the URL bar (or use another form of crashing the browser). The crash reporter window should appear focused and in front of any other apps.
List of other uplifts needed: none
Risk to taking this patch: Low
Why is the change risky/not risky? (and alternatives if risky): The method of focusing the application window is used by Firefox and the updater alike. We should have been focusing the crash reporter window like this all along.
String changes made/needed: none
Flags: needinfo?(spohl.mozilla.bugs)
Attachment #9016526 -
Flags: approval-mozilla-esr60?
Attachment #9016526 -
Flags: approval-mozilla-beta?
Comment 9•7 years ago
|
||
Comment on attachment 9016526 [details] [diff] [review]
Patch
Minimal patch and a tracked P1 regression for 63, it's too late for beta as we are on merge day but I approve it for RC as it is a visible regression for macOS users.
Attachment #9016526 -
Flags: approval-mozilla-beta? → approval-mozilla-release+
Comment 10•7 years ago
|
||
I’ve managed to reproduce this issue on Nightly 64.0a1 (2018-10-11) on macOS 10.13.
The crash reporter window is no longer hidden behind other windows on the latest Nightly build 64.0a1(2018-10-14), tested on Mac platform version 10.13 and 10.14, therefore I will mark this issue as verified on Fx 64.
Comment 11•7 years ago
|
||
Comment on attachment 9016526 [details] [diff] [review]
Patch
Approved for 60.3esr also.
Attachment #9016526 -
Flags: approval-mozilla-esr60? → approval-mozilla-esr60+
Assignee | ||
Comment 12•7 years ago
|
||
I should have added that the potential impact of not taking this patch is that we will see a reduced number of crash reports for macOS because users do not get to see the crash reporter window if it is hidden behind other apps. Thank you for the approvals!
![]() |
||
Comment 13•7 years ago
|
||
bugherder uplift |
Comment 14•7 years ago
|
||
bugherder uplift |
Comment 15•7 years ago
|
||
This issue is also verified fixed using Firefox 63.0 (BuildId:20181015152800) and Firefox 60.3.0esr (BuildId:20181015214543) on macOS platform - version 10.13 and 10.14.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in
before you can comment on or make changes to this bug.
Description
•