Bug 1498433: Ensure that crash reporter is in the foreground and focused on macOS. r=mstange